2004-10-06 Christoph Cullmann <cullmann@kde.org>
  * kate switched over to kmdi2, a slim version of old kmdi
    which allows only IDEA mode, but should be much less buggy
    beside this, we now allow tabbing thx to the new kmdi stuff
    and therefor should now be really feature complete at least mdi
    wise, having the features to allow multiple main windows,
    tabbing, splitters, widget stacks for the views, now only missing thingy
    would be to allow non kate view's to be embeded, like a khtml widget for
    documentation browsing or something like that

2003-08-28 Christoph Cullmann <cullmann@kde.org>
  * jowenn switch kate over to use kmdi, seems to work well
    for the first port, but still needs some fixes ;)

2002-07-19 Christoph Cullmann <cullmann@kde.org>
  * new interface structure implemented
    this is BIC and source incompatible to 2.x and 3.0.x plugins

2002-01-04 Christoph Cullmann <cullmann@kde.org>
  * the search stuff in the katedocument is rewritten now, should work mostly,
    only search for whole words is just a mess :(

2002-01-03 Christoph Cullmann <cullmann@kde.org>
  * kate app and kwrite app now use the katepart via libloader and link only
    to the kateinterfaces (which will soon be splitted into katepartinterfaces
    and kateinterfaces
  * new framework for the configpages of the katepart accessible through the
    interfaces
  * KSpell works again ;) my god, what a buggy thingy

2001-12-01 Christoph Cullmann <cullmann@kde.org>
  * speedup for insert/removeText/Line
  * new editStart/editEnd/editAddUndo functions to make the undo/redo + update
     after edit function calls easier to understand an use in katedocument.*

2001-11-30 Joseph Wenninger <jowenn@kde.org>
  * I hopefully fixed the CSS highlighting finally. It used
     deprecated syntax and there was a bug in the highlighting code,
     for handling weakDeliminiators. Who renamed them, once they where