@@ -33,6 +33,7 @@
 #include <kmdcodec.h>
 #include <kstdguiitem.h>
 #include <kpushbutton.h>
+#include <kpopupmenu.h>
 
 #include <qdir.h>
 #include <qlabel.h>
